# AeroSLR

./: .gitignore  CMakeLists.txt  CMakeLists_linux.txt  CMakeLists_original.txt  CMakePresets.json  README.md  TODO.md  imgui.ini  temp_glad_setup.txt
.github/: copilot-instructions.md
.github/workflows/: cmake-multi-platform.yml
dependencies/: imgui.ini
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
src/: config.h  imgui.ini  main.cpp
